--- a/views/accessories.hbs
+++ b/views/accessories.hbs
@@ -90,15 +90,15 @@
                         {{/each}}
                     </select><br>
                     <label> User </label>
-                    <select name="updateUserID" id="update =UserID">
+                    <select name="userId" id="userId">
                         <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
-                    <label> Name </label> <input type="text" name="name" placeholder="e.g. silk tie"><br>
-                    <label> Type </label> <input type="text" name="type" placeholder="e.g. tie"><br>
-                    <label> Color </label> <input type="text" name="color" placeholder="e.g. red"><br>
+                    <label> Name </label> <input type="text" id="name" name="name" placeholder="e.g. silk tie"><br>
+                    <label> Type </label> <input type="text" id="type" name="type" placeholder="e.g. tie"><br>
+                    <label> Color </label> <input type="text" id="color" name="color" placeholder="e.g. red"><br>
                 </fieldset>
                 <input class="btn" type="submit" id="updateAccessory" value="Update Accessory">
                     <input class="btn" type="button" value="cancel" >
@@ -128,35 +128,38 @@
 </html>
 
 <script>
-    function populateAccessoryInfo(accessoryId) {
-        fetch(`/accessories/${accessoryId}`)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error("Error fetching user data");
-                }
-                return response.json();
-            })
-            .then(accessoryData => {
-                // Populate the input fields with the fetched user data
-                document.getElementById("name").value = accessoryData.name;
-                document.getElementById("type").value = accessoryData.type;
-                document.getElementById("color").value = accessoryData.color;
-            })
-            .catch(error => {
-                console.error("Error:", error);
-            });
-    }
+    function populateTopInfo(accessoryId) {
+    fetch(`/accessories/${accessoryId}`)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Error fetching top data");
+            }
+            return response.json();
+        })
+        .then(accessoryData => {
+            // Populate the input fields with the fetched top data\
+            document.getElementById("userId").value = accessoryData.user_id;
+            document.getElementById("name").value = accessoryData.name;
+            document.getElementById("type").value = accessoryData.type;
+            document.getElementById("color").value = accessoryData.color;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+}
 
-    // Update the onchange event handler of the select element
-    document.getElementById("updateAccessoryID").addEventListener("change", function() {
-        var selectedAccessoryId = this.value; // Get the selected accessory ID
-        if (selectedAccessoryId) { // Ensure an accessory is selected
-            populateAccessoryInfo(selectedAccessoryId); // Call populateAccessoryInfo with the selected accessory ID
-        } else {
-            // Clear the input fields if no accessory is selected
-            document.getElementById("name").value = "";
-            document.getElementById("type").value = "";
-            document.getElementById("color").value = "";
-        }
-    });
+// Update the onchange event handler of the select element
+document.getElementById("updateAccessoryID").addEventListener("change", function() {
+    var accessoryId = this.value; // Get the selected top ID
+    if (accessoryId) { // Ensure a top is selected
+        populateTopInfo(accessoryId); // Call populateTopInfo with the selected top ID
+    } else {
+        // Clear the input fields if no top is selected
+        document.getElementById("userId").value = "";
+        document.getElementById("name").value = "";
+        document.getElementById("type").value = "";
+        document.getElementById("color").value = "";
+    }
+});
+
 </script>
