--- a/views/jackets.hbs
+++ b/views/jackets.hbs
@@ -80,26 +80,29 @@
 
         <p>&nbsp;</p>
         <div id="update" style="display: block">
-            <form id="updateJacket">
+            <form id="updateJacket" method="POST" action="/update-item/jackets">
+                <input type="hidden" name="page" value="jackets">
                 <legend><strong>Update Jacket</strong></legend>
                 <fieldset class="fields">
                     <label>Jacket ID</label>
                     <select name="updateJacketID" id="updateJacketID">
+                        <option value="">Select Jacket</option>
                         {{#each data.rows}}
                         <option value="{{this.jacket_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
-                    <select name="updateUserID" id="updateUserID">
+                    <select name="userId" id="userId">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
-                    <label> Name </label> <input type="text" name="name" placeholder="e.g. raincoat"><br>
-                    <label> Type </label> <input type="text" name="type" placeholder="e.g. raincoat"><br>
-                    <label> Color </label> <input type="text" name="color" placeholder="e.g. yellow"><br>
+                    <label> Name </label> <input type="text" id="name" name="name" placeholder="e.g. raincoat"><br>
+                    <label> Type </label> <input type="text" id="type" name="type" placeholder="e.g. raincoat"><br>
+                    <label> Color </label> <input type="text" id="color" name="color" placeholder="e.g. yellow"><br>
                 </fieldset>
-                <input class="btn" type="submit" id="UpdateJacket" value="Update Jacket">
+                <input class="btn" type="submit" id="updateJacket" value="Update Jacket">
                     <input class="btn" type="button" value="cancel" >
             </form> 
         </div>
@@ -124,3 +127,40 @@
         </div>
 	</body>
 </html>
+
+<script>
+    function populateJacketInfo(jacketId) {
+    fetch(`/jackets/${jacketId}`)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Error fetching top data");
+            }
+            return response.json();
+        })
+        .then(jacketData => {
+            // Populate the input fields with the fetched jacket data
+            document.getElementById("userId").value = jacketData.user_id;
+            document.getElementById("name").value = jacketData.name;
+            document.getElementById("type").value = jacketData.type;
+            document.getElementById("color").value = jacketData.color;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+}
+
+// Update the onchange event handler of the select element
+document.getElementById("updateJacketID").addEventListener("change", function() {
+    var selectedJacketId = this.value; // Get the selected top ID
+    if (selectedJacketId) { // Ensure a top is selected
+        populateJacketInfo(selectedJacketId); // Call populateTopInfo with the selected top ID
+    } else {
+        // Clear the input fields if no top is selected
+        document.getElementById("userId").value = "";
+        document.getElementById("name").value = "";
+        document.getElementById("type").value = "";
+        document.getElementById("color").value = "";
+    }
+});
+
+</script>
