--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -77,26 +77,29 @@
 
         <p>&nbsp;</p>
         <div id="update" style="display: block">
-            <form id="updateShoe">
+            <form id="updateShoe" method="POST" action="/update-item/shoes">
+                <input type="hidden" name="page" value="shoes">
                 <legend><strong>Update Shoe</strong></legend>
                 <fieldset class="fields">
                     <label>Shoe ID</label>
                     <select name="updateShoeID" id="updateShoeID">
+                        <option value="">Select Shoes</option>
                         {{#each data.rows}}
                         <option value="{{this.shoe_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
-                    <select name="updateUserID" id="updateUserID">
+                    <select name="userId" id="userId">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
-                    <label> Name </label> <input type="text" name="name" placeholder="e.g. air force 1s"><br>
-                    <label> Type </label> <input type="text" name="type" placeholder="e.g. sneaker"><br>
-                    <label> Color </label> <input type="text" name="color" placeholder="e.g. white"><br>
+                    <label> Name </label> <input type="text" id="name" name="name" placeholder="e.g. air force 1s"><br>
+                    <label> Type </label> <input type="text" id="type" name="type" placeholder="e.g. sneaker"><br>
+                    <label> Color </label> <input type="text" id="color" name="color" placeholder="e.g. white"><br>
                 </fieldset>
-                <input class="btn" type="submit" id="UpdateShoe" value="Update Shoe">
+                <input class="btn" type="submit" id="updateShoe" value="Update Shoe">
                     <input class="btn" type="button" value="cancel" >
             </form> 
         </div>
@@ -122,3 +125,40 @@
         </div>
 	</body>
 </html>
+
+<script>
+    function populateShoeInfo(shoeId) {
+    fetch(`/shoes/${shoeId}`)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Error fetching shoe data");
+            }
+            return response.json();
+        })
+        .then(shoeData => {
+            // Populate the input fields with the fetched shoe data\
+            document.getElementById("userId").value = shoeData.user_id;
+            document.getElementById("name").value = shoeData.name;
+            document.getElementById("type").value = shoeData.type;
+            document.getElementById("color").value = shoeData.color;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+}
+
+// Update the onchange event handler of the select element
+document.getElementById("updateShoeID").addEventListener("change", function() {
+    var selectedShoeId = this.value; // Get the selected shoe ID
+    if (selectedShoeId) { // Ensure a shoe is selected
+        populateShoeInfo(selectedShoeId); // Call populatShoeInfo with the selected shoe ID
+    } else {
+        // Clear the input fields if no top is selected
+        document.getElementById("userId").value = "";
+        document.getElementById("name").value = "";
+        document.getElementById("type").value = "";
+        document.getElementById("color").value = "";
+    }
+});
+
+</script>
