--- a/views/tops.hbs
+++ b/views/tops.hbs
@@ -78,7 +78,8 @@
 
         <p>&nbsp;</p>
         <div id="update" style="display: block">
-            <form id="updateOutfit">
+            <form id="updateTop" method="POST" action="/update-item/tops">
+                <input type="hidden" name="page" value="tops">
                 <legend><strong>Update Top</strong></legend>
                 <fieldset class="fields">
                     <label>Top ID</label>
@@ -89,16 +90,17 @@
                         {{/each}}
                     </select><br>
                     <label> User </label>
-                    <select name="updateUserID" id="updateUserID">
+                    <select name="userId" id="userId">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
-                    <label> Name </label> <input type="text" name="name" placeholder="e.g. sports tee"><br>
-                    <label> Type </label> <input type="text" name="type" placeholder="e.g. t-shirt"><br>
-                    <label> Color </label> <input type="text" name="color" placeholder="e.g. black"><br>
+                    <label> Name </label> <input type="text" id="name" name="name" placeholder="e.g. sports tee"><br>
+                    <label> Type </label> <input type="text" id="type" name="type" placeholder="e.g. t-shirt"><br>
+                    <label> Color </label> <input type="text" id="color" name="color" placeholder="e.g. black"><br>
                 </fieldset>
-                <input class="btn" type="submit" id="UpdateTop" value="Update Top">
+                <input class="btn" type="submit" id="updateTop" value="Update Top">
                     <input class="btn" type="button" value="cancel" >
             </form> 
         </div>
@@ -123,3 +125,40 @@
         </div>
 	</body>
 </html>
+
+<script>
+    function populateTopInfo(topId) {
+    fetch(`/tops/${topId}`)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Error fetching top data");
+            }
+            return response.json();
+        })
+        .then(topData => {
+            // Populate the input fields with the fetched top data\
+            document.getElementById("userId").value = topData.user_id;
+            document.getElementById("name").value = topData.name;
+            document.getElementById("type").value = topData.type;
+            document.getElementById("color").value = topData.color;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+}
+
+// Update the onchange event handler of the select element
+document.getElementById("updateTopID").addEventListener("change", function() {
+    var selectedTopId = this.value; // Get the selected top ID
+    if (selectedTopId) { // Ensure a top is selected
+        populateTopInfo(selectedTopId); // Call populateTopInfo with the selected top ID
+    } else {
+        // Clear the input fields if no top is selected
+        document.getElementById("userId").value = "";
+        document.getElementById("name").value = "";
+        document.getElementById("type").value = "";
+        document.getElementById("color").value = "";
+    }
+});
+
+</script>
