--- a/views/accessories.hbs
+++ b/views/accessories.hbs
@@ -27,24 +27,20 @@
 	<body>
         <h2>Accessories</h2>
         <div id="browse" style="display: block">
-        <p><strong>Browse Accessories</strong></p>
-
         <table id="accessories">
             <thead>
                 <tr>
-                    {{#each data.fields}}
-                    <th>
-                        {{name}}
-                    </th>
-                    {{/each}}
+                    <th>User</th>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>Color</th>
                 </tr>
             </thead>
         
             <tbody>
               {{#each data.rows}}
                 <tr>
-                    <td>{{this.accessory_id}}</td>
-                    <td>{{this.user_id}}</td>
+                    <td>{{this.first_name}} {{this.last_name}}</td>
                     <td>{{this.name}}</td>
                     <td>{{this.type}}</td>
                     <td>{{this.color}}</td>
