--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,7 +30,8 @@
             This website is a personal outfit manager where users can create an account that holds a digital collection of their closet. 
             Since each account is for a single user, we are expecting somewhere between 100-200 items of clothing/accessories per account. 
             The user can add their tops, bottoms, shoes, jackets, and accessories as individual items. They can then use these different 
-            items to create outfits. These outfits may also be linked to specific occasions where the outfit might be worn.
+            items to create outfits. These outfits may also be linked to specific occasions where the outfit might be worn. Each page allows
+            you to view its data as well as create new entries, update current ones, and delete them.
         </p>
         <table>
             <tbody>
@@ -40,47 +41,43 @@
                 </tr>
                 <tr>
                     <td><strong>Users</strong></td>
-                    <td>Display and add users to the database</td>
+                    <td>Users log their first and last name, email, and a password, which is hidden from the generic table view</td>
                 </tr>
                 <tr>
                     <td><strong>Outfits</strong></td>
-                    <td>Create, edit, add, and delete outfits from your wardrobe</td>
+                    <td>Users will select a top, bottom, shoe, and optional jacket to create their jacket</td>
                 </tr>
                 <tr>
                     <td><strong>Tops</strong></td>
-                    <td>Display and add tops to your wardrobe</td>
+                    <td>Each top has a user associated to it, as well as a name, color, and type of top</td>
                 </tr>
                 <tr>
                     <td><strong>Bottoms</strong></td>
-                    <td>Display and add Bottoms to your wardrobe</td>
+                    <td>Each bottom has a user associated to it, as well as a name, color, and type of bottom</td>
                 </tr>
                 <tr>
                     <td><strong>Shoes</strong></td>
-                    <td>Display and add Shoes to your wardrobe</td>
-                </tr>
-                <tr>
-                    <td><strong>Shoes</strong></td>
-                    <td>Display and add Shoes to your wardrobe</td>
+                    <td>Each shoe has a user associated to it, as well as a name, color, and type of shoe</td>
                 </tr>
                 <tr>
                     <td><strong>Jackets</strong></td>
-                    <td>Display and add Jackets to your wardrobe</td>
+                    <td>Each jacket has a user associated to it, as well as a name, color, and type of jacket</td>
                 </tr>
                 <tr>
                     <td><strong>Accessories</strong></td>
-                    <td>Display and add Accessories to your wardrobe</td>    
+                    <td>Each accessory has a user associated to it, as well as a name, color, and type of accessory</td>  
                 </tr>
                 <tr>
                     <td><strong>Occasions</strong></td>
-                    <td>Display and add Occasions to your wardrobe</td>
+                    <td>Each occasion has a user associated to it, as well as a name, and formality</td>
                 </tr>
                 <tr>
                     <td><strong>OutfitsAccessories</strong></td>
-                    <td>Intersection table for Outfits and Accessories, can view and add</td>
+                    <td>Intersection table to link Outfits and Accessories</td>
                 </tr>
                 <tr>
                     <td><strong>OutfitsOccasions</strong></td>
-                    <td>Intersection table for Outfits and Accessories, can view and add</td>
+                    <td>Intersection table to link Outfits and Accessories</td>
                 </tr>
             </tbody>
         </table>
