--- a/views/jackets.hbs
+++ b/views/jackets.hbs
@@ -29,24 +29,21 @@
         <H2>Jackets</H2>
 
         <div id="browse" style="display: block">
-        <p><strong>Browse Jackets</strong></p>
 
         <table id="jackets">
             <thead>
                 <tr>
-                    {{#each data.fields}}
-                    <th>
-                        {{name}}
-                    </th>
-                    {{/each}}
+                    <th>User</th>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>Color</th>
                 </tr>
             </thead>
         
             <tbody>
-              {{#each data.rows}}
+                {{#each data.rows}}
                 <tr>
-                    <td>{{this.jacket_id}}</td>
-                    <td>{{this.user_id}}</td>
+                    <td>{{this.first_name}} {{this.last_name}}</td>
                     <td>{{this.name}}</td>
                     <td>{{this.type}}</td>
                     <td>{{this.color}}</td>
