--- a/views/occasions.hbs
+++ b/views/occasions.hbs
@@ -29,24 +29,20 @@
         <H2>Occasions</H2>
 
         <div id="browse" style="display: block">
-        <p><strong>Browse Occasions</strong></p>
 
         <table id="occasions">
             <thead>
                 <tr>
-                    {{#each data.fields}}
-                    <th>
-                        {{name}}
-                    </th>
-                    {{/each}}
+                    <th>User</th>
+                    <th>Name</th>
+                    <th>Formality</th>
                 </tr>
             </thead>
         
             <tbody>
               {{#each data.rows}}
                 <tr>
-                    <td>{{this.occasion_id}}</td>
-                    <td>{{this.user_id}}</td>
+                    <td>{{this.first_name}} {{this.last_name}}</td>
                     <td>{{this.name}}</td>
                     <td>{{this.formality}}</td>
                 </tr>
