--- a/views/outfitsAccessories.hbs
+++ b/views/outfitsAccessories.hbs
@@ -29,23 +29,18 @@
         <H2>Outfits with Accessories</H2>
 
         <div id="browse" style="display: block">
-        <p><strong>Browse Outfits with Accessories</strong></p>
 
         <table id="outfitAccessories">
             <thead>
                 <tr>
-                    {{#each data.fields}}
-                    <th>
-                        {{name}}
-                    </th>
-                    {{/each}}
+                    <th>Outfit</th>
+                    <th>Accessory</th>
                 </tr>
             </thead>
         
             <tbody>
               {{#each data.rows}}
                 <tr>
-                    <td>{{this.outfit_acc_id}}</td>
                     <td>{{this.outfit}}</td>
                     <td>{{this.accessory}}</td>
                 </tr>
@@ -89,7 +84,7 @@
                     <select name="updateOutfitAccID" id="updateOutfitAccID">
                         <option value="">Outfit Accessory Pair</option> 
                         {{#each data.rows}}
-                        <option value="{{this.outfit_acc_id}}">{{this.outfit_acc_id}}</option>
+                        <option value="{{this.outfit_acc_id}}">{{this.outfit}} - {{this.accessory}}</option>
                         {{/each}}
                     </select><br> 
                     <label> Outfit </label>
@@ -122,7 +117,7 @@
                     <select name="deleteOutfitAccID" id="deleteOutfitAccID">
                         <option value="">Select Outfit Accessory Combination</option>
                         {{#each data.rows}}
-                        <option value="{{this.outfit_acc_id}}">{{this.outfit_acc_id}}</option>
+                        <option value="{{this.outfit_acc_id}}">{{this.outfit}} - {{this.accessory}}</option>
                         {{/each}}
                     </select><br>              
                 </fieldset>
