--- a/views/tops.hbs
+++ b/views/tops.hbs
@@ -26,25 +26,22 @@
 
 	<body>
         <h2>Tops</h2>
-            <div id="browse" style="display: block">
-        <p><strong>Browse Tops</strong></p>
+        <div id="browse" style="display: block">
 
         <table id="tops">
             <thead>
                 <tr>
-                    {{#each data.fields}}
-                    <th>
-                        {{name}}
-                    </th>
-                    {{/each}}
+                    <th>User</th>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>Color</th>
                 </tr>
             </thead>
         
-            <tbody id="table_data">
+            <tbody>
               {{#each data.rows}}
                 <tr>
-                    <td>{{this.top_id}}</td>
-                    <td>{{this.user_id}}</td>
+                    <td>{{this.first_name}} {{this.last_name}}</td>
                     <td>{{this.name}}</td>
                     <td>{{this.type}}</td>
                     <td>{{this.color}}</td>
